Changed some contrast issues on the start page (#11)

--- a/css/styles.css
+++ b/css/styles.css
@@ -10090,7 +10090,7 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0) 100%, rgba(0, 0, 0, 0.0) 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0) 100%, rgba(0, 0, 0, 0.0) 100%), url("../assets/img/bg-masthead.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
